
[package]
authors = ["Peam <contact@pmqueiroz.dev>"]
edition = "2021"
name    = "nephrite"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = "3.0.0"
napi-derive = "3.0.0"
kernel = { path = "crates/kernel" }
rayon = "1.11.0"
globwalk = "0.9.1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"

[workspace]
members = [
  "crates/kernel"
]
