
[package]
authors = ["Peam <contact@pmqueiroz.dev>"]
edition = "2021"
name    = "nephrite"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
bindings    = { path = "crates/bindings" }
kernel      = { path = "crates/kernel" }
log         = { path = "crates/log" }
napi        = { version = "3.0.0", features = ["serde-json"] }
napi-derive = "3.0.0"
utils       = { path = "crates/utils" }

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"

[workspace]
members = ["crates/utils", "crates/kernel"]
