[package]
license    = "MIT"
name       = "kernel"
repository = "https://github.com/pmqueiroz/nephrite.git"
version    = "0.1.0"

[dependencies]
utils      = { path = "../utils" }
bindings       = { path = "../bindings" }
rayon       = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
glob = "0.3.3"
napi        = "3.0.0"
napi-derive = "3.0.0"
