[package]
edition    = "2021"
license    = "MIT"
name       = "kernel"
repository = "https://github.com/pmqueiroz/nephrit.git"
version    = "0.1.0"

[dependencies]
bindings    = { path = "../bindings" }
glob        = "0.3.3"
log         = { path = "../log" }
napi        = "3.0.0"
napi-derive = "3.0.0"
rayon       = "1.11.0"
serde       = { version = "1.0.228", features = ["derive"] }
serde_json  = "1.0.145"
utils       = { path = "../utils" }
